--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@number-flow/react": "^0.3.5",
     "@vercel/analytics": "^1.4.1",
+    "atropos": "^2.0.2",
     "motion": "^11.11.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
