--- a/package.json
+++ b/package.json
@@ -11,18 +11,21 @@
   },
   "dependencies": {
     "@number-flow/react": "^0.3.5",
+    "@react-spring/web": "^9.7.5",
     "@vercel/analytics": "^1.4.1",
     "atropos": "^2.0.2",
     "motion": "^11.11.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
+    "three": "^0.172.0",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/three": "^0.172.0",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.13.0",
